# Smart-Novel-Gen-nie

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DOCS.md  Dockerfile  InkForge_墨铸_项目结构与需求方案.md  NovelWriter_项目结构与需求方案.md  README.md  TODO.md  docker-compose.yml  langgraph.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  state_refactor_findings.md  state_refactor_progress.md  state_refactor_task_plan.md  tsconfig.tsbuildinfo
apps/agent-service/: AGENTS.md  pyproject.toml
apps/agent-service/src/inkforge_agents/: __init__.py  app.py  config.py  service_auth.py  studio.py  supervision.py
apps/agent-service/tests/: test_agent_service_auth.py  test_config.py  test_health.py
apps/agent-service/tests/artifacts/: test_builder.py
apps/agent-service/tests/definitions/: test_capabilities.py
apps/agent-service/tests/golden/: test_prompts.py
apps/agent-service/tests/graph/: test_context.py  test_operation_graph.py  test_parent_graph.py  test_snapshots.py
apps/agent-service/tests/integration/: test_core_callbacks.py  test_debug_logs.py  test_run_submission.py
apps/agent-service/tests/jobs/: test_adapters.py  test_portrait.py  test_quality.py  test_rag.py  test_writing.py
apps/agent-service/tests/observability/: test_human_workflow_log.py  test_model_log_bridge.py
apps/agent-service/tests/operations/: test_artifact_contract.py  test_definitions.py  test_review_routing.py  test_router.py
apps/agent-service/tests/providers/: test_fake_provider.py  test_openai_compatible.py  test_provider_config.py
apps/agent-service/tests/queue/: test_consumer.py  test_repository.py
apps/agent-service/tests/runtime/: test_agent_runner.py  test_agent_runtime.py  test_billing_runtime.py  test_messages.py  test_visible_content.py
apps/agent-service/tests/short_story/: test_outline_merge.py  test_story_graph.py
apps/agent-service/tests/tools/: test_arguments.py  test_control.py  test_permissions.py  test_registry.py  test_short_outline.py
apps/core-api/: pyproject.toml
apps/core-api/src/inkforge_core/: __init__.py  agent_client.py  app.py  config.py  errors.py  service_auth.py  short_story_artifacts.py
apps/core-api/tests/: test_agent_client.py  test_config.py  test_contract_http.py  test_errors.py  test_health.py  test_service_auth.py
apps/core-api/tests/auth/: test_auth_api.py  test_auth_architecture.py  test_client_ip.py  test_legacy_cookie.py  test_readiness.py  test_redis_integration.py  test_repository_sqlite.py
apps/core-api/tests/billing/: test_authorization_binding.py  test_model_grants.py  test_pricing.py  test_usage_charge.py
apps/core-api/tests/chapters/: test_atomic_status.py  test_chapter_api.py
apps/core-api/tests/db/: __init__.py  model_typing_sample.py  test_model_metadata.py  test_schema_guard.py
apps/core-api/tests/debug/: test_workflow_logs_api.py
apps/core-api/tests/lore/: __init__.py  test_contracts.py  test_crud_matrix.py  test_lore_service.py  test_repository_boundaries.py
apps/core-api/tests/novels/: test_novel_api.py
apps/core-api/tests/operations/: test_background.py  test_recovery_audit.py  test_transient_errors.py
apps/core-api/tests/outlines/: __init__.py  test_foreshadowing_service.py  test_repository_contract.py  test_validation.py
apps/core-api/tests/quality/: test_dispatcher.py  test_quality_state.py
apps/core-api/tests/references/: __init__.py  test_index_callback_contract.py  test_internal_callback_api.py  test_rag.py  test_rag_dispatcher.py  test_reference_service.py  test_repository_contract.py  test_stale_index.py
docs/: BACKLOG.md  (+18 more)
(+805 files in other folders)
