[project]
name = "inkforge-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[tool.uv.workspace]
members = [
    "apps/core-api",
    "apps/agent-service",
    "packages/service-contracts",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "apps/core-api/tests",
    "apps/agent-service/tests",
    "packages/service-contracts/tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
