[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inkforge-agent-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography>=44,<47",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "inkforge-service-contracts",
    "inkforge-service-auth",
    "langchain-core>=0.3,<2",
    "langchain-openai>=0.3,<2",
    "langgraph>=0.2,<2",
    "orjson>=3.10,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "PyJWT[crypto]>=2.10,<3",
    "redis>=5.2,<7",
    "structlog>=24.4,<27",
    "uvicorn[standard]>=0.34,<1",
    "json-repair>=0.50,<1",
]

[tool.uv.sources]
inkforge-service-contracts = { workspace = true }
inkforge-service-auth = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inkforge_agents"]
