[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inkforge-core-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.30,<1",
    "bcrypt>=4.2,<6",
    "cryptography>=44,<47",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "inkforge-service-contracts",
    "inkforge-service-auth",
    "orjson>=3.10,<4",
    "pgvector>=0.3,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "PyJWT[crypto]>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "redis>=5.2,<7",
    "sqlalchemy[asyncio]>=2.0,<3",
    "structlog>=24.4,<27",
    "uvicorn[standard]>=0.34,<1",
]

[tool.uv.sources]
inkforge-service-contracts = { workspace = true }
inkforge-service-auth = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inkforge_core"]
